2011-05-18  Philipp Gampe <forge.typo3.org@philippgampe.info>

	* Fixed bug #13953: Third-party classes cannot be checked due to dynamicConfigFile in TCA (thanks to Jan Philipp Timme)
	* Fixed bug #13757: Scheduler task does not work at all (Michael Miousse)

2011-02-24  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Cleaned emconf for the release of TYPO3 4.5.2
	* Release linkvalidator 1.0.2

2011-02-24  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #13340: Regression in TYPO3 4.5.1: pid and uid database fields are always 0

2011-02-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #13318: Regression in linkvalidator

2011-02-22  Michael Miousse <michael.miousse@infoglobe.ca>

	* Fixed bug #12649: Split up analyzeRecord()
	* Cleaned emconf for the release of TYPO3 4.5.1
	* Release linkvalidator 1.0.1
	
2011-02-15	Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #12652:	If none of the link types are marked to be checked, all of them are checked
	* Fixed bug #12650:	tx_linkvalidator_tasks_validator: exec() is too long
	* Fixed bug #12454: Use setting "defaultMailFromName" and "defaultMailFromAddress"
	
2011-02-06  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12517: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (thanks to Jo Hasenau)
	* Fixed bug #12549: Unify capitalization of language labels

2011-01-26  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12526: Manual needs new screenshots and text since we now use 2 tabs in the module (thanks to Patrick Gaumond)
	* Cleaned emconf for the release of TYPO3 4.5
	* Release linkvalidator 1.0.0

2011-01-25  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Added Feature #12447: Clearly separate Checks from Report in the module (thanks to Patrick Gaumond, Philipp Gampe, Steffen Kamper and Christopher Stelmaszyk)

2011-01-21  Christopher Stelmaszyk  <chrissitopher@gmx.de>
